Working around the changes in Chrome that prevent an audio context from starting before user input.
Didn't go nearly as smoothly as I thought and the code is not looking all that great as a result but it works 😏

--- a/style/noise.css
+++ b/style/noise.css
@@ -41,6 +41,16 @@ form > label > div {
 	text-overflow: ellipsis;
 }
 
+.play-pause-container {
+	text-align: center;
+	margin: .5em .5em;
+	font-size: large;
+}
+
+footer {
+	padding: 1em;
+}
+
 @media only screen and (max-width: 20rem) {
 	.shorten {
 		display: none;
